<resources>
    <string name="app_name">ECommerceApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="start">START</string>
    <string name="monu">Monu</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="cancel">Cancel</string>
</resources>