<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountOptionsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blury_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:drawablePadding="6dp"
            android:text="@string/monu"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/texture_left"
            app:layout_constraintBottom_toBottomOf="@+id/guidelineEclipseLeftTexture"
            app:layout_constraintDimensionRatio="1:3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ellipse"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ellips"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_eclipse_bottom"
            app:layout_constraintEnd_toEndOf="@id/guidelineEclipseRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineEclipseLeft"
            app:layout_constraintTop_toTopOf="@id/guideline_eclipse_top"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="@dimen/smallButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            android:background="@drawable/blue_background"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvQuality"
            app:layout_constraintStart_toStartOf="@+id/guidelineEclipseLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvQuality"
            app:layout_constraintVertical_bias="0.122" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="@dimen/smallButtonWidth"
            android:layout_height="@dimen/smallButtonHeight"
            android:elevation="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/register_btn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register_btn"
            app:layout_constraintTop_toBottomOf="@+id/register_btn"
            app:layout_constraintVertical_bias="0.21" />

        <TextView
            android:id="@+id/right_address_for_shopping"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rightAddress"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/ellipse"
            app:layout_constraintEnd_toEndOf="@+id/ellipse"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="@+id/ellipse"
            app:layout_constraintTop_toBottomOf="@+id/tvAppName"
            app:layout_constraintVertical_bias="0.51" />

        <TextView
            android:id="@+id/tvQuality"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quality"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/right_address_for_shopping"
            app:layout_constraintStart_toStartOf="@+id/right_address_for_shopping"
            app:layout_constraintTop_toBottomOf="@+id/right_address_for_shopping" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/texture_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineEclipseLeftTexture"

            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEclipseLeftTexture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEclipseLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEclipseRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_eclipse_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_eclipse_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.52" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>